# INF01046-Assignment_I

./: CMakeLists.txt  README.md
include/: Image.hpp  Image2.hpp
src/: Image.cpp  Image2.cpp  main.cpp
